# smart-doc

./: .env.example  .gitignore  LICENSE  Makefile  README.md  codecov.yml  docker-compose.test.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: ci-uv.yml  ci.yml  quality.yml
backend/: .coverage  .coveragerc  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/endpoints/: chat.py  documents.py  evaluation.py
backend/app/core/: config.py  config.py.postgres_backup  database.py
backend/app/models/: document.py  evaluation.py
backend/app/services/: chat_service.py  document_processor.py  evaluation.py  rag_engine.py  vector_store.py
backend/tests/: conftest.py  test.py  test_api_chat.py  test_api_documents.py  test_api_evaluation.py  test_core_config.py  test_main.py  test_models.py  test_services_chat_service.py  test_services_document_processor.py  test_services_document_processor_extended.py  test_services_evaluation.py  test_services_rag_engine.py  test_services_vector_store.py
frontend/: package-lock.json  package.json  package_update.json
frontend/public/: index.html
frontend/src/: App.tsx  test-utils.tsx
frontend/src/components/: Layout.test.tsx  Layout.tsx
frontend/src/pages/: Chat.tsx  Dashboard.test.tsx  Dashboard.tsx  Documents.tsx  Evaluation.tsx
frontend/src/types/: index.ts
scripts/: backup.sh  deploy_prod.sh  monitor.sh  run_tests.sh  setup_dev.sh  test_integration.sh
