[project]
name = "smart-doc-analyzer"
version = "1.0.0"
description = "Smart Document Analyzer with RAG capabilities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain>=0.0.350",
    "langchain-community>=0.0.10",
    "anthropic>=0.7.8",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
