[project]
name = "smart-doc-analyzer-backend"
version = "1.0.0"
description = "Smart Document Analyzer Backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-community>=0.0.13", 
    "anthropic>=0.8.1",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
    "coverage>=7.3.2",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Oprava pro hatchling - říkáme mu kde najít náš kód
[tool.hatch.build.targets.wheel]
packages = ["app"]
